# LocallyNameless

./: LocallyNameless.cabal  README.md
agda/: LocallyNameless.agda
app/: Main.hs
src/LN/: Church.hs  Expression.hs  Parser.hs  PrettyPrint.hs
test/: Eval.hs  Main.hs
