cabal-version:      2.4
category:           Languages
build-type:         Simple
name:               LocallyNameless
synopsis:           A demonstration of Locally Nameless
version:            0.1.0


executable repl
  main-is:
    Main.hs

  ghc-options:
    -threaded -rtsopts

  hs-source-dirs:
    app/

  build-depends:
      base
    , Core
    , ansi-terminal
    , haskeline
    , megaparsec
    , text
    , transformers
    , prettyprinter-ansi-terminal
    , prettyprinter
    , mtl


Library Core

  ghc-options:
    -threaded
    -rtsopts
    -O2
    -fobject-code
    -Wall
    -Wincomplete-patterns

  hs-source-dirs:
    src/

  build-depends:
      base
    , containers
    , megaparsec
    , mtl
    , text
    , megaparsec
    , QuickCheck
    , prettyprinter
    , prettyprinter-ansi-terminal

  exposed-modules:
      LN.Expression
      LN.Parser
      LN.Church
      LN.PrettyPrint

  default-language:
    Haskell2010


test-suite test

  main-is:
    Main.hs

  type:
    exitcode-stdio-1.0

  ghc-options:
    -threaded -with-rtsopts=-N

  hs-source-dirs:
    test/

  build-depends:
      Core
    , base
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
    , containers
